# LocalLog

./: CMakeLists.txt  README.md  build.sh  build_config.mk  makefile
src/: CMakeLists.txt  logcommon.h  logfile.cpp  logfile.h  logger.cpp  logger.h  logrealize.cpp  logrealize.h  logstream.cpp  logstream.h  logtime.cpp  logtime.h  makefile
test/: CMakeLists.txt  main.cpp  makefile  numtest.cpp
work/: logger.cpp  logrealize.cpp  logtime.cpp  logtime.h
